<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.lqm.study.widget.NoScrollViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.lqm.study.widget.IconTextView
                android:id="@+id/it_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_tab_1_home"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_icon_size" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="首页"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_text_size" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_soft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.lqm.study.widget.IconTextView
                android:id="@+id/it_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_tab_2_sorf"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_icon_size" />

            <TextView
                android:id="@+id/tv_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="分类"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.lqm.study.widget.IconTextView
                android:id="@+id/it_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_tab_3_cart"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_icon_size" />

            <TextView
                android:id="@+id/tv_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="购物车"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_text_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.lqm.study.widget.IconTextView
                android:id="@+id/it_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_tab_4_my"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_icon_size" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="用户"
                android:textColor="@color/main"
                android:textSize="@dimen/tab_text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
