<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/topbar_height">


            <com.lqm.study.widget.IconTextView
                android:id="@+id/it_return"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:text="@string/ic_return"
                android:gravity="center"
                android:textSize="@dimen/top_icon_size"
                android:textColor="@color/text1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="确认订单"
                android:textColor="@color/text0"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                />

            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <RelativeLayout
                    android:id="@+id/rl_address"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:visibility="gone"
                    >


                    <com.lqm.study.widget.IconTextView
                        android:id="@+id/ic_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_address"
                        android:textSize="20dp"
                        android:textColor="@color/blue"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        />


                    <TextView
                        android:id="@+id/tv_shipping_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="收货人:豆腐"
                        android:layout_toRightOf="@id/ic_address"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="23dp"
                        android:textColor="@color/text0"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:id="@+id/tv_shipping_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="电话:12345678910"
                        android:layout_toRightOf="@id/tv_shipping_name"
                        android:layout_alignTop="@id/tv_shipping_name"
                        android:layout_marginLeft="30dp"
                        android:textColor="@color/text0"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:id="@+id/tv_shipping_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="地址:广东省深圳市龙岗区龙城街道xxxxxxxx"
                        android:layout_alignLeft="@id/tv_shipping_name"
                        android:layout_below="@id/tv_shipping_name"
                        android:layout_marginTop="13dp"
                        android:textColor="@color/text0"
                        android:textSize="13sp"
                        />

                    <com.lqm.study.widget.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_forward"
                        android:textSize="14sp"
                        android:textColor="@color/text1"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line"
                        android:layout_alignParentBottom="true"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_add_address"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:visibility="visible"
                    >

                    <com.lqm.study.widget.IconTextView
                        android:id="@+id/it_add"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ic_add"
                        android:layout_marginLeft="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/text0"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="添加地址"
                        android:textColor="@color/text0"
                        android:textSize="15sp"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/it_add"
                        android:layout_centerVertical="true"
                        />

                    <View style="@style/lineStyle"
                        android:layout_alignParentBottom="true"
                        />

                </RelativeLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View style="@style/lineStyle" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="备注："
                    android:textColor="@color/text0"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    />

                <EditText
                    android:id="@+id/et_remark"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/shape_round_rect_line_gray"
                    android:layout_margin="15dp"
                    android:maxLines="5"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:padding="10dp"
                    />

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#f5f5f5">

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="合计:￥20"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:textSize="17sp"
            android:textColor="@color/text0"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="提交订单"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:background="@color/orange"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

    </RelativeLayout>

</RelativeLayout>

